--- a/LaboratoryApp.csproj
+++ b/LaboratoryApp.csproj
@@ -89,6 +89,8 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>BaseModel.edmx</DependentUpon>
     </Compile>
+    <Compile Include="Models\AppContext.cs" />
+    <Compile Include="Models\CaptchaUtils.cs" />
     <Compile Include="Models\CountryOfInsuranceCompany.cs">
       <DependentUpon>BaseModel.tt</DependentUpon>
     </Compile>
@@ -119,6 +121,7 @@
     <Compile Include="Models\ServiceStatus.cs">
       <DependentUpon>BaseModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\SimpleMessager.cs" />
     <Compile Include="Models\sysdiagrams.cs">
       <DependentUpon>BaseModel.tt</DependentUpon>
     </Compile>
