--- a/LaboratoryApp.csproj
+++ b/LaboratoryApp.csproj
@@ -66,6 +66,26 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Page Include="Views\AccountantPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\AdminPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\AssistantInventorPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\AssistantPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\FunctionalWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Views\MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -75,6 +95,7 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="Models\AppContext.cs" />
+    <Compile Include="Models\AppData.cs" />
     <Compile Include="Models\BaseModel.Context.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -134,6 +155,22 @@
     </Compile>
     <Compile Include="Models\User.cs">
       <DependentUpon>BaseModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\UserWindowFactory.cs" />
+    <Compile Include="Views\AccountantPage.xaml.cs">
+      <DependentUpon>AccountantPage.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\AdminPage.xaml.cs">
+      <DependentUpon>AdminPage.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\AssistantInventorPage.xaml.cs">
+      <DependentUpon>AssistantInventorPage.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\AssistantPage.xaml.cs">
+      <DependentUpon>AssistantPage.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\FunctionalWindow.xaml.cs">
+      <DependentUpon>FunctionalWindow.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
