Services binding to ServicesList

--- a/LaboratoryApp.csproj
+++ b/LaboratoryApp.csproj
@@ -129,6 +129,7 @@
       <DependentUpon>BaseModel.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\PartialOrder.cs" />
+    <Compile Include="Models\PartialServiceOfOrder.cs" />
     <Compile Include="Models\Patient.cs">
       <DependentUpon>BaseModel.tt</DependentUpon>
     </Compile>
