--- a/LaboratoryApp.csproj
+++ b/LaboratoryApp.csproj
@@ -144,6 +144,7 @@
     <Compile Include="Models\ServiceOfOrder.cs">
       <DependentUpon>BaseModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\ServiceOfOrderReportFormer.cs" />
     <Compile Include="Models\ServiceStatus.cs">
       <DependentUpon>BaseModel.tt</DependentUpon>
     </Compile>
